# check_zpool_scrub

./: .travis.yml  CHANGELOG.md  Justfile  LICENSE  README.md  README.rst  README_template.rst  awk.sh  check_zpool_scrub  check_zpool_scrub.py  description  icingaexchange.yml  pyproject.toml  tox.ini  zfs_source_code.c
.github/workflows/: tests.yml
src/check_zpool_scrub/: __init__.py
sudoers.d/: zfs-history
test/: README.md  getopts.bats  integral.bats  integration.bats  test-script.sh  time-to-go.sh  unit-without-mock.bats  unit.bash_unit  unit.bats
test/lib/: skeleton.sh
tests/: README.md  helper.py  test_argparse.py  test_integration.py  test_main.py  test_on_real_executables.py  test_timespan.py  test_zpool_status.py
