[project]
name = "check_zpool_scrub"
version = "0.1.0"
description = ""
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.8,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["nagiosplugin>=1,<2"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/check_zpool_scrub"

[project.scripts]
"check_zpool_scrub" = "check_zpool_scrub:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=0.961",
    "nagiosplugin-stubs>=0.6.4",
    "pytest>=8.3.5",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
