[project]
name = "check_zpool_scrub"
version = "3.0.0a0"
description = "Monitoring plugin to check how long ago the last ZFS scrub was performed."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["nagiosplugin>=1,<2"]

[project.urls]
Download = "https://pypi.org/project/check_zpool_scrub/"
Repository = "https://github.com/Josef-Friedrich/check_zpool_scrub"
Issues = "https://github.com/Josef-Friedrich/check_zpool_scrub/issues"
Changelog = "https://github.com/Josef-Friedrich/check_zpool_scrub/blob/main/CHANGELOG.md"


[project.scripts]
"check_zpool_scrub" = "check_zpool_scrub:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=0.961",
    "nagiosplugin-stubs>=0.7.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
